# wsb-service

./: .gitignore  README.md  stack.yaml  wsb-service.cabal
app/: Main.hs
