name:                wsb-service
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wsb-service#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable wsb-service
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , warp
                     , wai
                     , text
                     , bytestring
                     , bytestring-conversion
                     , base64-bytestring
                     , mtl
                     , wsb-client
                     , wsb-args
                     , http-types
                     , wsb-counter-version
  default-language:    Haskell2010
